# jot

./: Cargo.toml  README.md  justfile
jot/: .rustfmt.toml  Cargo.toml
jot/src/: config_manager.rs  error.rs  git.rs  lib.rs  printer.rs  program_access.rs  reader.rs
