[package]
name = "jot"
version = "0.1.0"
edition = "2021"
description = "CLI tool to input and store your ideas without leaving the terminal"
authors = ["lloydlobo"]
categories = ["command-line-utilities", "command-line-interface" ]
keywords = ["cli", "git",  "note","productivity", "terminal"]

exclude = [
    "assets/*",
    "tests/*",
    "scripts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["cargo"] }
dirs = "4.0.0"
git2 = "0.16.1"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
termcolor = "1.1.3"
thiserror = "1.0.38"
which = "4.3.0"

[dev-dependencies]
tempfile = "3.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
